*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8787 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.language=Español Centroamericano
 properties.translators=Desarrolladores
 
 # Hints:
@@ -78,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=Añade un icono para tabla
 foxtrick.ForumYouthIcons.symbols.desc=Añade un icono para símbolos. Cada entrada esta separada por punto y coma. Para usar un punto y coma escribe "/;".
 foxtrick.ForumYouthIcons.debug.desc=Añade un ícono para el registro de depuración de Foxtrick
 foxtrick.ForumYouthIcons.settings.desc=Añade un ícono para los ajustes de Foxtrick
+foxtrick.ForumYouthIcons.tournament.desc=Agrega icono de TournamentID
+foxtrick.ForumYouthIcons.tournament_match.desc=Añade icono para TournamentMatchID
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de Foxtrick por etiquetas HTML-Tags
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Mostrar las citas anidadas en un spoiler. Especificar el nivel abajo.
@@ -240,7 +243,7 @@ foxtrick.ExtraShortcuts.No9.desc=No9 Radio
 foxtrick.ExtraShortcuts.Latehome.desc=Latehome Radio
 foxtrick.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
-foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara
+foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso/torneo de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara (pestañas de últimos partidos e historial).
 foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
 foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
@@ -408,7 +411,7 @@ foxtrick.HistoryStats.cupwinner.short=GC
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=El jugador puede ser promocionado %1 día(s) luego en %2.
+YouthPromotes.future=El jugador puede ser promocionado luego de %1 día, en %2.;El jugador puede ser promocionado luego de %1 días, en %2.
 YouthPromotes.today=¡El jugador puede ser promocionado hoy\!
 
 # links
@@ -487,11 +490,14 @@ CopyPosting.style.raw=sin formato
 CopyPosting.style.last=último
 
 ForumYouthIcons.label=Enlaces de Juveniles
+ForumYouthIcons.labelTournament=Torneos
 ForumYouthIcons.labelToolbar=Enlaces Principales
 ForumYouthIcons.youthplayerid=Insertar etiqueta de jugador juvenil
 ForumYouthIcons.youthteamid=Insertar etiqueta de equipo juvenil
 ForumYouthIcons.youthmatchid=Insertar etiqueta de partido juvenil
 ForumYouthIcons.youthseries=Insertar etiqueta de liga juvenil
+ForumYouthIcons.tournamentid=Insertar etiqueta de torneo.
+ForumYouthIcons.tournamentmatchid=Insertar etiqueta de partido de torneo.
 
 ForumOtherIcons.label=Varios
 ForumOtherIcons.debug=Insertar registro de depuración de FoxTrick
@@ -539,12 +545,12 @@ Filters.addFilterOptions=Añade opciones de filtrado
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
-foxtrick.datetimestrings.days=días
-foxtrick.datetimestrings.hours=hr
-foxtrick.datetimestrings.minutes=min
-foxtrick.datetimestrings.short_seasons=t
-foxtrick.datetimestrings.short_weeks=sm
-foxtrick.datetimestrings.short_days=d
+foxtrick.datetimestrings.days=día;días
+foxtrick.datetimestrings.hours=hr;hrs
+foxtrick.datetimestrings.minutes=min;mins
+foxtrick.datetimestrings.short_seasons=t;t
+foxtrick.datetimestrings.short_weeks=sm;sms
+foxtrick.datetimestrings.short_days=d,d
 
 #Transfer prices
 transfercompare_medianprice=Mediana del precio
@@ -694,14 +700,14 @@ Last_match=Último partido
 Last_match.abbr=Último
 Last_stars=Estrellas
 Last_stars.abbr=Est
-Last_stars_EndOfGame=Ãšltimas estrellas al final del juego
+Last_stars_EndOfGame=Últimas estrellas al final del juego
 Last_stars_EndOfGame.abbr=Rt
 Last_stars_decline=Disminución última estrella
 Last_stars_decline.abbr=Dif
 Last_position=Latest Posición
 Last_position.abbr=Pos
 #following string uses pluralForms
-Last_match_played_as_at=Jugó %1 minutos como %2 en su último partido en el %3.
+Last_match_played_as_at=Jugó %1 minuto como %2 en su último partido en el %3.;Jugó %1 minutos como %2 en su último partido en el %3.
 Last_match_didnot_play=No ha jugado todavía.
 
 Bruised=Lastimado
@@ -736,7 +742,7 @@ Current_league.abbr=Liga
 JoinedSince=Llegó desde
 JoinedSince.abbr=Desde
 
-Hotlist=En la Lista Caliente
+Hotlist=Lista Caliente
 Hotlist.abbr=LC
 
 skilltable.youthplayer=juvenil
@@ -761,7 +767,7 @@ foxtrick.tlconfirmation=¿Deseas poner a este jugador en la lista de transferenc
 foxtrick.staffconfirmationhire=¿Deseas contratar %num %kind?
 foxtrick.staffconfirmationsack=¿Deseas despedir %num %kind?
 foxtrick.ntremoveconfirmation=¿Deseas añadir/remover este jugador del equipo?
-foxtrick.confirmstripserver=¿Deseas modficar los servidores de Hattrick en los enlaces, para hacerlos funcionar en el foro?
+foxtrick.confirmstripserver=¿Deseas modificar el servidor de Hattrick en los enlaces, para hacerlos funcionar en el foro?
 foxtrick.conferences.signaturetoggle=Firma
 foxtrick.conferences.markunread=Marcar como no leído desde aquí
 foxtrick.tweaks.selectplayer=Seleccionar jugador
@@ -790,9 +796,9 @@ foxtrick.offensiveTrainer=Un entrenador %s de mentalidad ofensiva.
 foxtrick.balancedTrainer=Un entrenador %s que no es ni ofensivo ni defensivo.
 
 #following string uses pluralForms
-notify.newMail=Has recibido %s nuevo(s) correo(s).
+notify.newMail=Has recibido %s nuevo correo.;Has recibido %s nuevos correos.
 #following string uses pluralForms
-notify.newForumMessage=Has recibido %s nuevo(s) mensaje(s) en el foro.
+notify.newForumMessage=Has recibido %s nuevo mensaje en el foro.;Has recibido %s nuevos mensajes en el foro.
 
 htLive=HT Live
 
@@ -826,7 +832,7 @@ CopyYouth.trainingReport.copied=El reporte de entrenamiento ha sido copiado
 CopyYouth.scoutComment=Copiar comentario del scout
 CopyYouth.scoutComment.copied=El comentario del scout ha sido copiado
 CopyYouth.playerSource=Copiar código fuente del jugador
-CopyYouth.playerSource.copied=El código fuente del jugador ha sido copiado
+CopyYouth.playerSource.copied=El código fuente del jugador ha sido copiado.
 CopyYouth.fixturesSource=Copiar el código de la clasificación
 CopyYouth.fixturesSource.copied=El código de la clasificación ha sido copiado
 CopyYouth.goto=Ir a %s
@@ -841,7 +847,7 @@ MatchReportFormat.penaltyShootOut=Tanda de penales
 MatchReportFormat.result=Resultado
 
 CopySelected.desc=Copiar selección con Ctrl + C.
-SpecialPaste.desc=Pegar selección conh Shift + Clic izquierdo
+SpecialPaste.desc=Pegar selección con Shift + Clic izquierdo.
 
 foxtrick.tweaks.youthclub=Hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (código HT-ML para el foro)
@@ -931,7 +937,7 @@ CurrentBid=Oferta actual
 CurrentBid.abbr=Ofe
 CurrentBidder=Mánager con oferta más alta
 CurrentBidder.abbr=Mángr
-CurrentBidderShort=Manager con oferta más alta
+CurrentBidderShort=Oferta más alta
 CurrentBidderShort.abbr=MnOf
 
 
@@ -975,10 +981,10 @@ truthTable.predicted_position=\#
 truthTable.name=Equipo
 truthTable.real_position=Posición Real
 truthTable.real_points=Puntos reales
-truthTable.predicted_points=Pred. Puntos
-truthTable.difference=Â±
+truthTable.predicted_points=Pronóstico de puntos
+truthTable.difference=±
 truthTable.notAvailableYet=Datos no disponibles. Ve a HTMS para crear los datos necesarios
-truthTable.tableAtHTMS=Esta tabla en el sitio de HTMS 
+truthTable.tableAtHTMS=Esta tabla en el sitio de HTMS
 
 # HTMSPoints
 HTMSPoints=Puntos HTMS\:
@@ -1018,7 +1024,7 @@ ticker.type.supporter=Log in de equipos apoyados
 ticker.type.forum=Respuestas en el foro
 ticker.type.transfer=Info de transferencia
 ticker.type.challenge=Retos
-ticker.type.guestbook=Libro de Visita
+ticker.type.guestbook=Libro de Visitas
 ticker.type.mail=HT-Mail
 ticker.type.myht=Mensaje de Mi Hattrick
 ticker.type.others=Otros
@@ -1030,12 +1036,12 @@ LocalTime.local=Tiempo/Hora local
 LocalTime.local.title=Tiempo/hora local. Clicen el reloj para cambiar a la hora de Hattrick
 
 # Links
-Links.feeds=Feeds of link lists (separated by line breaks)
+Links.feeds=Fuentes de lista de enlaces(separadas por saltos de línea)
 
 #actions
 Copy=Copiar
 View=Vista
-Switch_view=Cambiar Vista
+Switch_view=Cambiar vista
 Detach=Separar
 AddHomegrown=Añadir canterano
 showTimeInClub=Mostrar tiempo en el club
@@ -1043,10 +1049,10 @@ sort.up=Arriba
 sort.down=Abajo
 action.clearCache=Borrar cache
 action.clearCache.title=Borra el cache del Xml de Foxtrick. FoxTrick descarga información extra desde los servidores de Hattrick en demanda. Hasta que cierres tu navegador, Foxtrick posteriormente usará copias almacenadas localmente. En raras ocaciones pueden volverse obsoletas. Borra el cache si quieres que Foxtrick descargue esa información extra nuevamente.
-featureHighlight.title=Haz clic para resaltar la mayor parte de las caracterÃ­sticas de FoxTrick
+featureHighlight.title=Haz clic para resaltar la mayor parte de las caracterí­sticas de FoxTrick
 
 # fennec ui
-pageAction.rightSidebar=Mostrar barra dereacha
+pageAction.rightSidebar=Mostrar barra derecha
 pageAction.mainContent=Mostrar contenido principal
 pageAction.leftSidebar=Mostrar barra izquierda
 pageAction.all=Mostrar todo
@@ -1185,6 +1191,6 @@ foxtrick.prefs.AdditionalOptions=Opciones Adicionales
 foxtrick.prefs.smallcopyicons=Mostrar iconos pequeños de copiar en el encabezado en lugar de la caja lateral separada
 foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick page (for developers)
 
-foxtrick.prefs.permissionsHint=%s necesita el permiso para trabajar. Permite el acceso en el siguiente cuadro de diÃ¡logo.
+foxtrick.prefs.permissionsHint=%s necesita el permiso para trabajar. Permite el acceso en el siguiente cuadro de dialogo. Si no das el permiso, este modulo sera deshabilitado.
 
 ###EOF
