--- a/content/locale/lt/foxtrick.properties
+++ b/content/locale/lt/foxtrick.properties
@@ -1,5 +1,7 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.language=Lithuanian version by LA-MJ (originally by Mod-Summercloud)
+properties.version=HEAD
 properties.translators=Kūrėjai
 
 # Hints:
@@ -78,6 +80,8 @@ foxtrick.ForumYouthIcons.table.desc=Prideda lentelės ikoną. Individuali žyma 
 foxtrick.ForumYouthIcons.symbols.desc=Prideda simbolių ikoną. Įrašus atskirkite kabliataškiais. Norėdami atskiro kabliataškio simbolio įrašykite „/;“.
 foxtrick.ForumYouthIcons.debug.desc=Prideda Foxtrick veiklos žurnalo (programuotojams) ikoną
 foxtrick.ForumYouthIcons.settings.desc=Prideda Foxtrick nustatymų ikoną
+foxtrick.ForumYouthIcons.tournament.desc=Prideda turnyro ID ikoną
+foxtrick.ForumYouthIcons.tournament_match.desc=Prideda turnyro rungtynių ID ikoną
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Pakeisti FoxTrick žymas HTML elementais (pvz., „pre“ – sumaketuoto teksto elementas)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Rodyti kelis kartus percituotą tekstą slaptukuose. Nurodykite minimalų slėptinų citatų lygmenį.
@@ -428,6 +432,7 @@ foxtrick.TeamStats.NotTransferListed.label=Neparduodami
 foxtrick.TeamStats.ActivePlayers.label=Galintys žaisti
 foxtrick.TeamStats.HomeGrownPlayers.label=Užauginti žaidėjai
 foxtrick.TeamStats.PurchasedPlayers.label=Nupirkti žaidėjai
+foxtrick.TeamStats.FilterFor=Filtruoti
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -486,11 +491,14 @@ CopyPosting.style.raw=paprastu
 CopyPosting.style.last=paskutiniu
 
 ForumYouthIcons.label=JA nuorodos
+ForumYouthIcons.labelTournament=Turnyrai
 ForumYouthIcons.labelToolbar=Pagrindinės nuorodos
 ForumYouthIcons.youthplayerid=Įterpti jaunio žymę.
 ForumYouthIcons.youthteamid=Įterpti jaunių komandos žymę
 ForumYouthIcons.youthmatchid=Įterpti jaunių rungtynių žymę.
 ForumYouthIcons.youthseries=Įterpti jaunių grupės žymę.
+ForumYouthIcons.tournamentid=Prideda turnyro ikoną.
+ForumYouthIcons.tournamentmatchid=Prideda turnyro rungtynių ikoną.
 
 ForumOtherIcons.label=Kita
 ForumOtherIcons.debug=Įterpti FoxTrick veiklos žurnalą (programuotojams).
@@ -533,6 +541,7 @@ Filters.Form=Forma
 Filters.XP=Patirtis
 Filters.specialty=Specialybė
 Filters.stars=Žvaigždutės
+Filters.addFilterOptions=Pasirinkti filtrą
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -699,6 +708,8 @@ Last_stars_decline.abbr=+
 Last_position=Paskutinė pozicija
 Last_position.abbr=Poz
 #following string uses pluralForms
+Last_match_played_as_at=Savo paskutinėse rungtynėse (%3) žaidė %1 minutę kaip %2.;Savo paskutinėse rungtynėse (%3) žaidė %1 minučių kaip %2.;Savo paskutinėse rungtynėse (%3) žaidė %1 minutes kaip %2.
+Last_match_didnot_play=Dar nežaidė.
 
 Bruised=Susižeidęs
 Bruised.abbr=Sžd
@@ -949,6 +960,8 @@ maximum=Daugiausiai
 foxtrick.RapidId.ViewById=Žiūrėti ID
 Senior=Pagrindas
 Youth=Jauniai
+Tournaments=Turnyrai
+Tournament=Turnyras
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Pakeisti lentelės vaizdą.
