--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -67,6 +67,7 @@ pluralFormRuleID=pluralFormRule0
 
 #Forums
 
+ForumYouthIcons.labelTournament=Turnuvalar
 
 
 #special bbcode, not really youth icons
@@ -90,7 +91,12 @@ pluralFormRuleID=pluralFormRule0
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+match.pos.rb.abbr=SB
+match.pos.lf.abbr=SF
+match.pos.mf.abbr=GF
+match.pos.rf.abbr=SF
 
+match.role.setPieces.abbr=Duran Toplar
 
 
 
@@ -105,6 +111,8 @@ pluralFormRuleID=pluralFormRule0
 
 
 #following string uses pluralForms
+Last_match_played_as_at=%3 tarihindeki maçta %2 mevkisinde %1 dakika oynadı. 
+Last_match_didnot_play=Henüz oynanmadı.
 
 
 
@@ -137,33 +145,98 @@ pluralFormRuleID=pluralFormRule0
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
+foxtrick.matches.suppstats=Taraftar istatistikleri
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.link=HT-ML e bağlantı konumunu kopyala
+copy.ht-ml=HT-ML e kopyala
+copy.table=tablo yu HT-ML e kopyala
 
 #teampopups
+Manager=yönetici
+Team=Takım
+Matches=Maçlar
+Players=Oyuncular
+last_5_ips=5 en son oturum açma
+Guestbook=Ziyaretçi defteri
+SendMessage=mesaj gönder
+Challenge=Kapışma
+Achievements=Başarıları
+TransferHistory=transfer geçmişi
+TeamHistory=Kulüp geçmişi
+NextMatch=Sonraki maç
+AddNextMatch=sonraki maçı HT Live a ekle
+YouthMatches=Genç maçları
+more=daha fazla...
+less=daha az...
+TeamPopupLinks.prefsCaption=Bağlantı tercihleri
+TeamPopupLinks.ShowByDefault=Varsayılan olarak göster
+TeamPopupLinks.ShowOnMore=Daha fazla bilgi göster
+TeamPopupLinks.OpenNewTab=Yeni sekmede aç
 
+total_stars=Toplam yıldız
 
 # FlagCollectionToMap
+foxtrick.FlagCollectionToMap.ShowMap=Haritayı göster
+foxtrick.FlagCollectionToMap.HideMap=Haritayı gizle
+foxtrick.FlagCollectionToMap.Africa=Afrika
+foxtrick.FlagCollectionToMap.Asia=Asya
+foxtrick.FlagCollectionToMap.Europe=Avrupa
+foxtrick.FlagCollectionToMap.MEast=Orta Doğu
+foxtrick.FlagCollectionToMap.SAmerica=Güney Amerika
+foxtrick.FlagCollectionToMap.World=Dünya
 
 # SkillTable
+Skill_table=beceri tablosu
+
+Nationality=Milliyet
+Flag=bayrak
+Flag.abbr=bayrak
+Player=oyuncu
+Player.abbr=oyuncu
+Age.abbr=yaş
+Match=Maç
+
+Bookmark=Yer işareti
+Deadline=Son Tarih
+Deadline.abbr=Son Tarih
+CurrentBid=Geçerli teklif
+CurrentBid.abbr=Teklif
+CurrentBidder=Geçerli en yüksek teklif
+CurrentBidder.abbr=Teklif veren
 
 
-
-
+team.status.booked=hazırlık maçı ayarlandı
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideInjured=Yaralıları Gizle
+TransferSearchResultFilters.days=Gün\:
 
 # refer to transfer search form
+minimum=En Az
+maximum=Maksimum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+Youth=genç
 
 # SkillTable
 
 # HTMSPrediction
+HTMSPrediction.winDrawLoss=kazanma/beraberlik/kaybetme
+HTMSPrediction.title=HTMS Maç Analizi
+HTMSPrediction.changePrediction=Tahmini değiştir
+HTMSPrediction.team=Takım
 
 #htms table of statistical truth
+truthTable.table=İstatistiksel doğru için HTMS tablosu
+truthTable.predicted_position=\#
+truthTable.name=Takım
+truthTable.real_position=Ana pozisyon
+truthTable.real_points=Mevcut puanlar
+truthTable.predicted_points=Tahmini Puanlar
+truthTable.difference=±
 
 # HTMSPoints
 
@@ -185,8 +258,10 @@ MyMonitor.type.nt=Milli
 ticker.type.welcome=Hoşgeldin
 ticker.type.transfer=Transfer
 ticker.type.challenge=Kapışma
+ticker.type.others=Diğerleri
 
 # LocalTime
+LocalTime.hattrick=Hattrick zamanı
 
 # Links
 
@@ -195,6 +270,7 @@ sort.up=Yukarı
 sort.down=Aşağı
 
 # fennec ui
+pageAction.leftSidebar=Sol çubuğu göster
 pageAction.all=Tümünü göster
 
 # buttons
