*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8790 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -79,6 +79,8 @@ foxtrick.ForumYouthIcons.table.desc=Dodaje ikonu za tablicu. Općeniti tag prihv
 foxtrick.ForumYouthIcons.symbols.desc=Dodaje ikonu ispod simbola. Unosi su odvojeni točka-zarezom. Kako biste koristili unesite "/;".
 foxtrick.ForumYouthIcons.debug.desc=Dodaje ikonu za FoxTrick debug log
 foxtrick.ForumYouthIcons.settings.desc=Dodaje ikonu za postavke FoxTricka
+foxtrick.ForumYouthIcons.tournament.desc=Dodaje ikonu za ID turnira
+foxtrick.ForumYouthIcons.tournament_match.desc=Dodaje ikonu za ID utakmice turnira
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Zamijeniti FoxTrickove HT-ML-oznake u HTML-oznake (npr. 'pre' element)
 foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Prikaži velike citate u spoileru. Odredite razinu ispod.
@@ -488,11 +490,14 @@ CopyPosting.style.raw=sirov
 CopyPosting.style.last=zadnji
 
 ForumYouthIcons.label=Linkovi za juniore
+ForumYouthIcons.labelTournament=Turniri
 ForumYouthIcons.labelToolbar=Glavni linkovi
 ForumYouthIcons.youthplayerid=Dodaj link na juniorskog igrača
 ForumYouthIcons.youthteamid=Dodaj link na juniorsku momčad
 ForumYouthIcons.youthmatchid=Dodaj link na juniorsku utakmicu
 ForumYouthIcons.youthseries=Dodaj link na juniorsku ligu
+ForumYouthIcons.tournamentid=Umetnite oznaku za turnir.
+ForumYouthIcons.tournamentmatchid=Umetnite oznaku za utakmicu turnira.
 
 ForumOtherIcons.label=Ostalo
 ForumOtherIcons.debug=Umetnite FoxTrickove debug zapise.
