--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -32,6 +32,7 @@ pluralFormRuleID=pluralFormRule0
 #YouthSkillHideUnknown
 #HighlightCupwins
 #CountryList
+foxtrick.RatingsDisplay.HatStats.desc=HatStats
 
 # -----------------------------------------------------------------------------
 
@@ -39,109 +40,355 @@ pluralFormRuleID=pluralFormRule0
 # IN-GAME STRINGS. translate first
 
 #Embed Media
+foxtrick.EmbedMedia.EmbeddedImage=katılmış resim
 
 #icons
+foxtrick.ExtraShortcuts.statistics=İstatistikler
+foxtrick.ExtraShortcuts.transfers=Transferler
+foxtrick.ExtraShortcuts.ManageCHPP=CHPP ürünlerinizi düzenleyin
+foxtrick.ExtraShortcuts.prefs=Tercihler
+foxtrick.ExtraShortcuts.ftprefs=FoxTrick tercihleri
 
 #HistoryStats
+foxtrick.HistoryStats.season=Sezon
+foxtrick.HistoryStats.cup=Kupa Turu
+foxtrick.HistoryStats.league=seriler
+foxtrick.HistoryStats.pos=Serilerin son konumu
+foxtrick.HistoryStats.label=Geçmiş istatistikleri
+foxtrick.HistoryStats.cupwinner=Kupa Şampiyonu
 
 # YouthPromotes
 #following string uses pluralForms
+YouthPromotes.today=Oyuncu bugün terfi edebilir\!
 
 # links
+foxtrick.links.boxheader=Linkler
 
 #teamstats+filters
+foxtrick.TeamStats.label=Takım genel bakış
+foxtrick.TeamStats.PlayerNotToOld.label=Oyuncular < 19 yıl
+foxtrick.TeamStats.PlayerToOld.label=Oyuncular >\= 19 yıl 
+foxtrick.TeamStats.Cards.label=kartlar
+foxtrick.TeamStats.Injured.label=Sakat
+foxtrick.TeamStats.TransferListed.label=Transfer-listelenen
+foxtrick.TeamStats.Pictures.label=Yüzler
+foxtrick.TeamStats.PlayedLatest.label=Son maçta oynadı
+foxtrick.TeamStats.NotPlayedLatest.label=Son maç oynamadı
+foxtrick.TeamStats.NotTransferListed.label=Transfer-listelenen değil
+foxtrick.TeamStats.ActivePlayers.label=Aktif oyuncular
+foxtrick.TeamStats.PurchasedPlayers.label=Satın alınan oyuncular
 
 #season stats
 #note to translators. use abreviations of league table where applicable
+foxtrick.seasonstats.boxheader=Sezon genel bakış
 
+foxtrick.seasonstats.league=Lig
+foxtrick.seasonstats.friendly=hazırlık maçları
 
 
 #Newsfeed filter
+foxtrick.LeagueNewsFilter.friendlies=Hazırlık maçları & değişen antrenörler
+foxtrick.LeagueNewsFilter.transfers=Transferler
+foxtrick.LeagueNewsFilter.lineup_changes=Dizilim değişiklikleri
 
 # FoxtrickAddLeaveConfButton
 
+forum.preferences=Forum Tercihleri
 
 # ForumTemplates
+delete_template_ask=Şablon silinsin mi?
 
 #PostPreview
+show_preview_from_post=Gönderinin önizlemesini göster
+preview=Önizleme
+forumPreview.send=Gönder
 
 #Forums
+CopyPosting.abbr=%s şeklinde kopyala
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=Sıra
+CopyPosting.style.last=Son
 
+ForumYouthIcons.label=Paf bağlantıları
 ForumYouthIcons.labelTournament=Turnuvalar
+ForumYouthIcons.labelToolbar=As takım bağlantıları
+ForumYouthIcons.youthplayerid=Paf oyuncusu etiketi ekle.
+ForumYouthIcons.youthteamid=Paf takımı etiketi ekle.
+ForumYouthIcons.youthmatchid=Paf maçı etiketi ekle.
+ForumYouthIcons.youthseries=Paf ligi etiketi ekle.
 
+ForumOtherIcons.label=Diğer
+ForumOtherIcons.settings=FoxTrick ayarları ekle.
 
 #special bbcode, not really youth icons
+ForumSpecialBBCode.q=Alıntı ekle
+ForumSpecialBBCode.clock=Gerçek zaman ekle
+ForumSpecialBBCode.forumSymbol="% S" ekle
+ForumSpecialBBCode.symbols=Simge ekle\: %s
 
 
 
 #Transferlistfilters
+foxtrick.transferfilter.delete_filter_ask=Bu filtrelemeyi silmek istediğine emin misin?
+foxtrick.transferfilter.save_new_filter=Yeni filtreyi kaydet
+foxtrick.transferfilter.Foxtrick_Filters=Foxtrick filtreleri
 
 #Filter
+Filters=Filtreler
+Filters.filter=Ok
+Filters.clear=Sil
+Filters.tsi=TSI
+Filters.stamina=Kondisyon
+Filters.XP=Deneyim
+Filters.specialty=Özel
+Filters.stars=Yıldızlar
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
 #next 6 use pluralFroms
 
 #Transfer prices
+transfercompare_medianprice=Ortalama fiyat
+transfercompare_avgprice=Ortalama fiyat
 
+match.type.league=Lig
+match.type.qualification=Elemeler
+match.type.cup=Kupa
+match.type.friendly=Hazırlık
+match.type.friendly.cup=hazırlık maçı(Kupa kuralları)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=uluslararası hazırlık maçı
+match.type.nt.competitive=Dünya Kupası
+match.type.youth.league=genç ligi
+match.type.youth.friendly=genç hazırlık maçı
+match.type.youth.friendly.cup=hazırlık maçı (Kupa kuralları)
 
+matchOrder.noMatchSelected=maç seçilmedi
+matchOrder.comparedTo=Karşılaştırıldığında\:
+matchOrder.previousPrediction=Önceki tahmin
+matchOrder.AddMatchManually=bir maç ekle
+matchOrder.swapPositions=pozisyonları değiştir
+matchOrder.options=Seçenekler
+matchOrder.staminaDiscount=kondisyon indirimi
+matchOrder.summary=Özet
 
 #Skills
+Playmaking=Oyunkuruculuk
+Winger=Kanat oyuncusu
+Scoring=golcülük
+Scoring.abbr=SC
+Passing=pas
+Defending=Defans
+Keeper=Kaleci
+Set_pieces=Duran Top
 
+PsicoTSI=PsicoTSI (ortalama form)
+PsicoTSI.abbr=Psico
+HTMS_Ability=Yetenek HTMS puanı
+HTMS_Ability.abbr=Yetenek
+HTMS_Potential=Potansiyel HTMS puanı
+HTMS_Potential.abbr=Potansiyel
 
+PlayerCategory=Oyuncu kategorisi
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
+categories.FW=For
 
+match.pos.kp=Kaleci
+match.pos.kp.abbr=Kal
+match.pos.lb=Sol bek
+match.pos.lcd=Sol stoper
+match.pos.mcd=Stoper
+match.pos.rcd=Sağ stoper
+match.pos.rb=Sağ bek
 match.pos.rb.abbr=SB
+match.pos.lw=Sol kanat
+match.pos.lw.abbr=Sol K
+match.pos.lcm=Sol ortasaha
+match.pos.lcm.abbr=Sol OS
+match.pos.mcm=Orta saha
+match.pos.mcm.abbr=OS
+match.pos.rcm=Sağ ortasaha
+match.pos.rcm.abbr=Sağ OS
+match.pos.rw=Sağ kanat
+match.pos.rw.abbr=SK
+match.pos.lf=Sol forvet
 match.pos.lf.abbr=SF
+match.pos.mf=Orta forvet
 match.pos.mf.abbr=GF
+match.pos.rf=Sağ forvet
 match.pos.rf.abbr=SF
 
+match.role.setPieces=Duran Topçu
 match.role.setPieces.abbr=Duran Toplar
+match.role.captain=Kaptan
+match.role.captain.abbr=Kap.
+
+match.player.unknown=Bilinmeyen oyuncu
+
+General=Genel
+
+PlayerNumber=Oyuncu sayısı
+PlayerNumber.abbr=\#
+
+TSI=Toplam beceri endeksi
+TSI.abbr=TSI
+
+CanBePromotedIn=yükseltilebilir
+
+Personality=Kişilik
+Aggressiveness=Saldırganlık
+Honesty=Dürüstlük
+
+Leadership=Liderlik
+Experience=Deneyim
+
+Stamina=Kondisyon
+Form=Formu
 
 
+Status=Durum
+Status.abbr=Durum
 
+Yellow_card=Sarı kart
+Red_card=Kırmızı kart
 
+Speciality=Özel
 
-
-
-
-
-
-
-
-
+Last_match=Son maç
+Last_match.abbr=Son
+Last_stars=En son yıldız
+Last_stars_EndOfGame=Oyunun sonunda Son yıldızlar
+Last_stars_decline=Son yıldız düşüş
+Last_position=Son konum
+Last_position.abbr=Poz
 #following string uses pluralForms
 Last_match_played_as_at=%3 tarihindeki maçta %2 mevkisinde %1 dakika oynadı. 
 Last_match_didnot_play=Henüz oynanmadı.
 
+Bruised=yara bantlı
+Injured=Sakat
+Injured.abbr=sakat
 
+Salary=Maaş
+Salary.abbr=Maaş
 
+TransferListed=Transfer-listelenen
+TransferListed.abbr=TL
 
+NrOfMatches=Maç sayısı
+LeagueGoals=Lig golleri
+CupGoals=Kupa Golleri
+FriendliesGoals=hazırlık maçı golleri
+CareerGoals=Kariyer golleri
+Hattricks=Hattricks
+Hattricks.abbr=HT
 
+Current_club=geçerli kulüp
+Current_club.abbr=kulüp
+Current_league=Geçerli Ligi
+Current_league.abbr=Lig
 
+JoinedSince=Beri katıldı
+JoinedSince.abbr=Beri
 
+Hotlist=sık kullanılanlar listesi
+Hotlist.abbr=Takip Ettiklerim
 
+skilltable.youthplayer=genç oyuncusu
 
 #matchdetail
+foxtrick.matchdetail.midfield=Orta Saha
+foxtrick.matchdetail.attack=Atak
+foxtrick.matchdetail.defence=Defans
+foxtrick.matchdetail.total=Toplam
+foxtrick.shortcut.matchlineup=diziliş
 
+foxtrick.matchdetail.right=Sağ
+foxtrick.matchdetail.left=Sol
+foxtrick.conferences.signaturetoggle=İmza
+foxtrick.conferences.markunread=Buradan okunmadı olarak işaretle
+foxtrick.tweaks.selectplayer=Oyuncu Seç
+foxtrick.linkscustom.selecticon=Simgesini seçin
+foxtrick.linkscustom.addpersonallink=Kişisel bağlantı ekle
+foxtrick.linkscustom.addlink=Link Ekle
+foxtrick.linkscustom.remove=Kaldır
+foxtrick.linkscustom.copy=Kopyala
+foxtrick.linkscustom.export=Dışa aktarma
+foxtrick.linkscustom.confirmremove=Gerçekten kaldırılsın mı?
+foxtrick.linkscustom.addtag=Bir etiket ekle
+foxtrick.linkscustom.tags=Etiketler
+foxtrick.linkscustom.help=Yardım
+foxtrick.matches.income=Gelir\:
+foxtrick.tweaks.Birthdays=Doğum günü
+foxtrick.tweaks.BirthdayToday=Bugün doğum günü
+foxtrick.tweaks.BirthdayLastWeek=Geçen hafta Doğum günleri
+foxtrick.tweaks.BirthdayNextWeek=Önümüzdeki hafta Doğum günleri
+foxtrick.copymatchid=Panoya matchID kopyalamak için tıklayın
+foxtrick.ExtendedPlayerDetails.perseason=/sezon
 
 
 #following string uses pluralForms
 #following string uses pluralForms
 
+htLive=HT Canlı
 
+foxtrick.modules_allpages=Tüm sayfalarda çalışan modüller
 
+Coach=Antrenör
+CurrentSquad=Takım kadrosu
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
+foxtrick.tweaks.actions=Olaylar
+foxtrick.tweaks.writeinguestbook=Ziyaretçi defterine yazmak
+foxtrick.tweaks.copyplayerad=oyuncu reklamı kopyala
+foxtrick.tweaks.copied=Oyuncu reklamı panoya kopyalandı.
 
+ratings.HatStats=HatStats
+ratings.LoddarStats=LoddarStats
+ratings.PeasoStats=PeasoStats
+ratings.VnukStats=VnukStats
+ratings.HTitaVal=HTitaVal
+ratings.GardierStats=GardierStats
 
+CopyRatings.both=Değerleri kopyala (HT-ML'de)
+CopyRatings.home=Ev sahibi takımın değerlerini kopyala (HT-ML'de)
+CopyRatings.away=Deplasman takımı değerlerini kopyala (HT-ML'de)
+CopyRatings.copied=Maç değerleri panoya kopyalandı.
 
+CopyYouth.trainingReport=Antreman raporunu kopyala
+CopyYouth.trainingReport.copied=Antreman raporu kopyalandı.
+CopyYouth.scoutComment=Gözcü yorumunu kopyala
+CopyYouth.scoutComment.copied=Gözcü yorumu kopyalandı.
+CopyYouth.playerSource=Oyuncu kaynağını kopyala
+CopyYouth.playerSource.copied=Oyuncu kaynağı kopyalandı.
+CopyYouth.fixturesSource=Fikstürü kopyala
+CopyYouth.fixturesSource.copied=Fikstür kopyalandı.
+CopyYouth.goto=%s'e git
 
+MatchReportFormat.MatchReport=Maç raporu
+MatchReportFormat.lineup=Diziliş
+MatchReportFormat.kickOff=Başlama vuruşu
+MatchReportFormat.halfTime=İlk Yarı
+MatchReportFormat.fullTime=Maç sonu
+MatchReportFormat.extraTime=Uzatma
+MatchReportFormat.penaltyShootOut=Penaltılar
+MatchReportFormat.result=Sonuç
 
+CopySelected.desc=Ctrl C ile kopyalayın seçimi.
+SpecialPaste.desc=Shift+Sol tıklama ile yapıştırın.
 
+foxtrick.tweaks.youthclub=Hattrick-youthclub.org
+foxtrick.tweaks.youthstatistics=Gençlik istatistikleri ht-ys.org
 
 #matches
+foxtrick.matches.right=Sağ
+foxtrick.matches.left=Sol
+foxtrick.matches.center=orta
+foxtrick.matches.defense=def
+foxtrick.matches.attack=atak
+foxtrick.matches.indfreekick=Endirekt serbet vuruş
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
@@ -154,11 +401,11 @@ copy.ht-ml=HT-ML e kopyala
 copy.table=tablo yu HT-ML e kopyala
 
 #teampopups
-Manager=yönetici
+Manager=Yönetici
 Team=Takım
 Matches=Maçlar
 Players=Oyuncular
-last_5_ips=5 en son oturum açma
+last_5_ips=Son 5 bağlanma
 Guestbook=Ziyaretçi defteri
 SendMessage=mesaj gönder
 Challenge=Kapışma
@@ -188,15 +435,17 @@ foxtrick.FlagCollectionToMap.SAmerica=Güney Amerika
 foxtrick.FlagCollectionToMap.World=Dünya
 
 # SkillTable
-Skill_table=beceri tablosu
+Skill_table=Yetenek tablosu
 
 Nationality=Milliyet
 Flag=bayrak
 Flag.abbr=bayrak
 Player=oyuncu
 Player.abbr=oyuncu
+Age=Yaş
 Age.abbr=yaş
 Match=Maç
+Series=Lig
 
 Bookmark=Yer işareti
 Deadline=Son Tarih
@@ -205,13 +454,17 @@ CurrentBid=Geçerli teklif
 CurrentBid.abbr=Teklif
 CurrentBidder=Geçerli en yüksek teklif
 CurrentBidder.abbr=Teklif veren
+CurrentBidderShort=Geçerli en yüksek teklif eden
 
 
 team.status.booked=hazırlık maçı ayarlandı
+ShowFriendlyBooked.ShowFriendlies=Hazırlık maçlarını göster
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised="Sakat ama oynayabilir"leri gizle
 TransferSearchResultFilters.hideInjured=Yaralıları Gizle
+TransferSearchResultFilters.hideSuspended=Cezalıları gizle
 TransferSearchResultFilters.days=Gün\:
 
 # refer to transfer search form
@@ -219,11 +472,16 @@ minimum=En Az
 maximum=Maksimum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
+Senior=As
 Youth=genç
 
 # SkillTable
+foxtrick.SkillTable.Switch_view_title=Tablonun görünümünü değiştir.
+foxtrick.SkillTable.showTimeInClub_title=Oyuncunun klübün As takımına katıldığı zamanı gösterir
+foxtrick.SkillTable.detach=Ayır
 
 # HTMSPrediction
+HTMSPrediction.prediction=Tahmini sonuç
 HTMSPrediction.winDrawLoss=kazanma/beraberlik/kaybetme
 HTMSPrediction.title=HTMS Maç Analizi
 HTMSPrediction.changePrediction=Tahmini değiştir
@@ -237,39 +495,68 @@ truthTable.real_position=Ana pozisyon
 truthTable.real_points=Mevcut puanlar
 truthTable.predicted_points=Tahmini Puanlar
 truthTable.difference=±
+truthTable.tableAtHTMS=Bu tablo htms Web sayfasında
 
 # HTMSPoints
+HTMSPoints=HTMS Puanı\:
+HTMSPoints.AbilityAndPotential=Yetenek\:% 1 / Potansiyel\:% 2
 
 # CrossTable
+CrossTable.graph=Sezon grafiği
 # will be shown as "R13" denoting round 13
+CrossTable.noMatches=Henüz maç yapılmadı.
 
 # MyMonitor
+MyMonitor.header=Ekranım
 #following string uses pluralForms
+MyMonitor.add=Takımı ekranıma ekle
+MyMonitor.remove=Bu takımı mönitörümden kaldır
+MyMonitor.addHelp=Monitöre eklemek istediğiniz takımın sayfasına gidin, kenar çubuğunda takımı ekleyebileceğiniz bir kutucuk göreceksiniz.
+MyMonitor.removeTeam=Kaldırmak için bir takım seçin\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
-MyMonitor.type.senior=As
+MyMonitor.type.senior=As Takım
 MyMonitor.type.youth=Paf Takım
 MyMonitor.type.nt=Milli
 
 # MarkAllAsRead
+MarkAllAsRead.title=Tüm forum başlıklarını okundu olarak işaretle
 
 # TickerAlert
+TickerAlert.enable=Etkinleştir
+TickerAlert.sound=Ses
 
 # tickers
-ticker.type.welcome=Hoşgeldin
-ticker.type.transfer=Transfer
+ticker.type.welcome=Hoşgeldin Mesajı
+ticker.type.supporter=Desteklenen takım çevirimiçi oldu
+ticker.type.forum=Forum cevapları
+ticker.type.transfer=Transfer Bilgisi
 ticker.type.challenge=Kapışma
+ticker.type.guestbook=Ziyaretçi defteri
+ticker.type.mail=HT-Mail
+ticker.type.myht=Hattrick'im mesaj
 ticker.type.others=Diğerleri
 
 # LocalTime
 LocalTime.hattrick=Hattrick zamanı
+LocalTime.hattrick.title=Saat Hattrick saatine göre ayarlı. Yerel saate dönmek için saatin üzerine tıklayın.
+LocalTime.local=Yerel saat
+LocalTime.local.title=Saat yerel saate göre ayarlı. Hattrick saatine dönmek için saatin üzerine tıklayın.
 
 # Links
 
 #actions
+Copy=Kopyala
+View=Görünüm
+Switch_view=Görünümü değiştir
+Detach=Ayır
+showTimeInClub=Kulüpteki geçirdiği süreyi göster
 sort.up=Yukarı
 sort.down=Aşağı
+action.clearCache=Önbelleği temizle
 
 # fennec ui
+pageAction.rightSidebar=Sağ taraftaki çubuğu göster
+pageAction.mainContent=Ana içeriği göster
 pageAction.leftSidebar=Sol çubuğu göster
 pageAction.all=Tümünü göster
 
@@ -303,5 +590,6 @@ pageAction.all=Tümünü göster
 
 
 
+foxtrick.prefs.permissionsHint=%S çalışması için izin gerekiyor. Aşağıdaki iletişim erişimine izin verin. Eğer reddederseniz bu modül özelliği devre dışı kalacaktır.
 
 ###EOF
