Serbian Translation update (typos)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8791 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -100,7 +100,7 @@ foxtrick.EmbedMedia.EmbedGenericImagesClever.desc=Покушај да погод
 #Forum direct page links
 foxtrick.DirectPageLinks.desc=Додаје линкове за прелазак на одређену страницу у теми на Форуму.
 #
-foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
+foxtrick.CopyPostID.desc=У заглавље поста на форуму убацује дугме за копирање Пост ИД-а.
 foxtrick.CopyPosting.desc=Додај иконицу за копирање поста на форуму заједно са референцама.
 foxtrick.ShowForumPrefButton.desc=Приказује иконицy за подешавање форума на свим страницама форума.
 foxtrick.Links.desc=Основни модул без којег остали модули за линкове не могу да функционишу.
@@ -158,7 +158,7 @@ foxtrick.PersonalityImages.desc=Додаје обојене бројеве за 
 foxtrick.HideSignatures.desc=Сакрива потпис корисника на Форуму и уместо њега убацује линк 'Потпис'.
 foxtrick.MarkUnread.desc=Додаје линк који означава све наредне постове у теми као 'непрочитане'.
 foxtrick.ForumModeratorIconLinks.desc=Додаје иконице за модераторске функције на врху тема када су доступне
-foxtrick.ForumNextAndPrevious.desc=Уклања дугмиће 'Наредни' и 'Претходни' на форумским темама ако су претходно били искључени.
+foxtrick.ForumNextAndPrevious.desc=Уклања дугмиће 'Наредни' и 'Претходни' на форумским темама кад год су неактивни.
 foxtrick.ForumLastPost.desc=Замењује линкове у листи тема на форуму линковима до последње поруке у већ прочитаним темама.
 foxtrick.ForumLastPost.lastpage.desc=Иди на последњу страницу, а не на последњу поруку.
 foxtrick.MatchPlayerColouring.desc=Сенчи играче у меч извештају у зависности од тима за који су играли. Уколико на страницу меч извештаја дођете преко линка на страници играча, само ће тај играч бити осенчен.
@@ -331,7 +331,7 @@ foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Уклони адрес
 foxtrick.RapidId.desc=Формулар за претраживање тимова, играча и сличног садржаја на основу ИД-а.
 foxtrick.YouthSeriesEstimation.desc=У резултатима претраге омладинских лига, приказује очекивани датум почетка сезоне за лиге у којима је међусезона у току.
 foxtrick.LocalTime.desc=Опционо приказуј време у локалној временској зони уместо званичног Хеттрик времена
-foxtrick.ForumThreadAutoIgnore.desc=Аутоматки игнориши теме на форуму уз помоћ одбраних тагова који се појављују у називу.(имена тема које почињу са [АТаг] или {АТаг}). За тагови нису битна велика или мала слова .
+foxtrick.ForumThreadAutoIgnore.desc=Аутоматски игнориши теме на форуму уз помоћ одбраних тагова који се појављују у називу.(имена тема које почињу са [АТаг] или {АТаг}). За тагови нису битна велика или мала слова .
 foxtrick.ForumThreadAutoIgnore.Tags.desc=Тагови (на пример: NT, idea, Bug). Уколико користите више тагова раздвојите их зарезом.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД-ови тема (део ИД-а поста до тачке испред броја поста) које неће бити игнорисане (ИД-ове раздвојите зарезом)
 foxtrick.TableSort.desc=Омогућава сортирање по колонама свих 'правих' табела које имају заглавље (укључујући и табеле у постовима на форуму)
